assets/css/style.css
/*  Table of Contents 
    1. global styles
        1.1 variables
        1.2 css reset

    2. typography

    3. layout 
        3.1 Nav Bar Styling
        3.1 Main Page Styling
        3.2 Biography Page Styling 
        3.4 Gallery Page Styling 
        3.5 Publication Page Styling 
        3.6 Footer Styling 

    4. utilites 
        4.1 Buttons
        4.2 Card Hover effects

    5. media queries 

*/

/*  ================
    1. global styles
    ================ */

/* == 1.1 Variables == */
:root {
    --background: rgba(255, 255, 255, 1);
    --bg-light: rgba(254, 248, 236, 1);
    --bg-dark: rgba(32, 44, 57, 1);
    --bg-mid: rgba(241, 149, 106, 1);

    --ff-prim: "Montserrat", sans-serif;
    --ff-sec: 'Darker Grotesque', sans-serif;
    --ff-spec: 'Comforta', sans-serif;

    --clr-prim-500: rgba(82, 113, 142, 1);
    --clr-prim-700: rgba(67, 93, 117, 1);
    --clr-prim-900: rgba(52, 73, 91, 1);

    --clr--sec-500: rgba(244, 128, 124, 1);
    --clr--sec-700: rgba(242, 109, 105);
    --clr--sec-900: rgba(240, 84, 79, 1);

    --clr--light-500: rgba(255, 255, 255, 1);
    --clr--light-700: rgba(254, 248, 236, 1);
    --clr--light-900: rgba(253, 240, 213, 1);

    --fs-300: 0.875rem;
    --fs-400: 1rem;
    --fs-700: 1.75rem;

    --fw-400: 500;
    --fw-700: 700;
    --fw-900: 900;


}

/*== 1.2 css reset ==*/

::selection {
    background: var(--clr--sec-500)
}


/* Box sizing rules */
*,
*::before,
*::after {
    box-sizing: border-box;
}

/* Remove default margin */
body,
h1,
h2,
h3,
h4,
p,
figure,
blockquote,
dl,
dd {
    margin: 0;
}

/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
ul[role='list'],
ol[role='list'] {
    list-style: none;
}

/* Set core root defaults */
html:focus-within {
    scroll-behavior: smooth;
}

/* Set core body defaults */
body {
    min-height: 100vh;
    text-rendering: optimizeSpeed;
    line-height: 1.5;
}

/* A elements that don't have a class get default styles */
a:not([class]) {
    text-decoration-skip-ink: auto;
}

/* Make images easier to work with */
img,
picture {
    max-width: 100%;
    display: block;
}

/* Inherit fonts for inputs and buttons */
input,
button,
textarea,
select {
    font: inherit;
}

/* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
@media (prefers-reduced-motion: reduce) {
    html:focus-within {
        scroll-behavior: auto;
    }


}


/*  =============
    2. typography 
    ============= */

h1,
h2 {
    font-family: var(--ff-prim);
    font-weight: var(--fw-900);
    color: var(--clr-prim-900)
}

/* clamp sets responsive font size */

h1 {
    font-size: clamp(.85rem, 1rem + 10vw, 2rem);
}

h2 {
    font-size: clamp(.75rem, 1rem + 10vw, 1.5rem);
}

p {
    font-family: var(--ff-sec);
    font-size: clamp(.5rem, .5rem + 10vw, 1.5rem)
}

/*  =============
    3. layout 
    ============= */


/* header */
.header {
    background-color: var(--bg-light);
    text-align: center;
    position: relative;
    width: 100%;
    z-index: 999;
}

.header h1 {
    color: var(--clr-prim-700);
    font-family: var(--ff-prim);
    text-decoration: none;

}

.header h1 a {
    text-decoration: none;
}

.header h1 a:visited {
    color: inherit;
}



/* == 3.1 navigation menu styling == */

.nav-toggle {
    display: none;
}

.nav-toggle-label {
    position: absolute;
    top: 0;
    left: 0;
    margin-left: 1em;
    height: 100%;
    display: flex;
    align-items: center;

}

/* hamburger button styling */

.nav-toggle-label span,
.nav-toggle-label span::before,
.nav-toggle-label span::after {
    display: block;
    background: var(--bg-dark);
    height: 2px;
    width: 2em;
    border-radius: 2px;
    position: relative;
}

.nav-toggle-label span::before,
.nav-toggle-label span::after {
    content: '';
    position: absolute;

}

.nav-toggle-label span::before {
    bottom: 7px;
}

.nav-toggle-label span::after {
    top: 7px;
}


nav {
    position: absolute;
    text-align: left;
    top: 100%;
    left: 0;
    background: var(--bg-light);
    width: 100%;
    transform: scale(1, 0);
    transform-origin: top;
    transition: transform 400ms ease-in-out;
}

nav ul,
.ft-nav ul {
    margin: 0;
    padding: 0;
    list-style: none;
}

nav li,
.ft-nav li {
    margin-bottom: 1em;
    margin-left: 1em;
}

nav a {
    color: var(--clr-prim-500);
    font-family: var(--ff-prim);
    text-decoration: none;
    font-size: 1rem;
    text-transform: uppercase;
    opacity: 0;
    transition: opacity 150ms ease-in-out;
}

nav a:hover,
.ft-nav a:hover {
    color: var(--clr--sec-700);

}

/* enables hamburger  */

.nav-toggle:checked~nav {
    transform: scale(1, 1);
}

.nav-toggle:checked~nav a {
    opacity: 1;
    transition: opacity 250ms ease-in-out 250ms;
}




/* == 3.2 Home Page Styling == */

/* hero media styling */

.hero {
    background-color: var(--bg-light);
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    background: rgba(32, 44, 57, .65);
    color: var(--clr--light-900);
    margin-bottom: 100px;
    height: 30rem;
    padding: 5rem;
    position: relative;
    overflow: hidden;
    min-height: 125vh;
}

/* overriding global style for hero text */
.hero h1 {
    padding: 0.5rem;
    font-size: 4.5rem;
    text-transform: uppercase;
    color: var(--clr--light-900);
    text-shadow: 2px 2px var(--clr--sec-700);
}

.hero h2 {
    padding: 1rem;
    color: var(--clr--light-900);
    text-align: left;
}

.hero p {
    padding: 2rem;
    text-align: center;
}

.video-bg {
    position: absolute;
    z-index: -1;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    min-width: 100%;
    min-height: 100%;

}

/* main area*/

body {
    background-color: var(--bg-light);
}
/* ... */

